[package]
name = "gsn_push_processing"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
log = "0.4.29"
env_logger = "0.11.8"
envy = "0.4.2"
dotenvy = "0.15.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.42"
